--- a/Untitled237/WebFolder/index.waPage/index.html
+++ b/Untitled237/WebFolder/index.waPage/index.html
@@ -10,10 +10,10 @@
 		<meta name="wakanda-build" content="7.149673"/>
 		<meta id="waf-interface-css" name="WAF.config.loadCSS" content="styles/index.css"/>
 		<meta id="waf-project-css" name="WAF.config.loadCSS" content="/application.css"/>
+<meta name="WAF.config.loadJS" id="waf-script" content="scripts/index.js"/>
 </head>
 	<body id="waf-body" data-type="document" data-rpc-validation="false" data-rpc-namespace="rpc" data-rpc-activate="false" data-lib="WAF" data-entire-model="false" data-platform="desktop" data-viewport-width="device-width" data-viewport-initial-scale="1.0" data-viewport-maximum-scale="1.0" data-viewport-minimum-scale="1.0" data-apple-meta-tags-status-bar="default" data-workspace-orientation="portrait" data-workspace-width="0" data-workspace-height="0" data-group="[]" data-theme="default" style="bottom:;right:;visibility:hidden;">
 		<button id="button1" data-type="button" data-lib="WAF" class="waf-widget waf-button " data-action="simple" data-target="_blank" data-constraint-left="true" data-constraint-top="true"></button>
-	
 	<button id="button2" data-type="button" data-lib="WAF" class="waf-widget waf-button " data-action="simple" data-target="_blank" data-constraint-left="true" data-constraint-top="true"></button>
 		<script type="text/javascript" src="/waLib/WAF/Loader.js"></script>
 	</body>
